# orion

./: .gitignore  .replit  ORION.md  README.md  app.py  assignment_test.or  basic_for_test.or  comprehensive_test.or  debug_exact.or  debug_test.or  demo_unified_loops.or  final_test.or  float_test.or  index.html  main.py  orion_asm.s  orion_exec  orion_interpreter.py  orion_lexer.py  orion_parser.py  proof_assembly.s  proof_executable  proof_test.or  pyproject.toml  replit.md  return_literal.or  return_simple.or  return_test.or  script.js  server.py  simple_for_test.or  simple_test.or  style.css  test1.or  test2.or  test_all_fixed.or  test_call.or  test_comparison.or  test_const_invalid.or  test_const_no_init.or  (+24 more)
.ccls-cache/@@home@runner@workspace/: @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno-base.h.blob  (+316 more)
.ccls-cache/@home@runner@workspace/: compiler@ast.h  (+21 more)
compiler/: Makefile  assignment_test.or  ast.h  ast_impl.cpp  check.or  codegen.cpp  compound_test.or  debug_main.txt  debug_test.or  debug_tuple.or  debug_while.or  debug_while_output.txt  demo_all_features.or  demo_input.or  demo_working_features.or  final_test.or  fresh_test.or  lexer.cpp  lexer.h  main.cpp  nested_test.or  orion  orion_asm.s  orion_exec  parser.cpp  parser_backup.cpp  pass_test.or  proof_assembly.s  proof_executable  runtime.c  simple_floor_div_test.or  simple_parser.h  simple_power_test.or  simple_test.or  simple_var_test.or  simple_vars.or  test.or  test2.or  test3.or  test4.or  (+102 more)
examples/: fibonacci.or  hello.or  orion_asm.s
stdlib/: core.or
