[project]
name = "orion-web-ide"
version = "1.0.0"
description = "Web-based IDE for the Orion Programming Language - a pure compiled systems language"
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.3.0",
]
